# rehlds-m

./: .clang-format  .clang-tidy  .cppcheck_suppressions  .editorconfig  .gitattributes  .gitignore  .pvs-studio  CMakeLists.txt  CMakePresets.json  README.md  README.ru.md
.github/: release-drafter.yml
.github/workflows/: build-and-test.yml  linux.yml  release-drafter.yml  windows.yml
apps/hlds/: CMakeLists.txt  hlds.exe.manifest.in  hlds.exe.rc.in
apps/hlds/src/hlds/: hlds.main.cpp
cmake/: CMakeUtilities.cmake  ClangTidy.cmake  CompileOptions.cmake  CompileOptionsLinux.cmake  CompileOptionsLinuxClang.cmake  CompileOptionsLinuxGNU.cmake  CompileOptionsLinuxIntelLLVM.cmake  CompileOptionsWindows.cmake  CompileOptionsWindowsClang.cmake  CompileOptionsWindowsMSVC.cmake  Coverage.cmake  Cppcheck.cmake  FmtLib.cmake  GoogleTest.cmake  Iwyu.cmake  PvsStudio.cmake  SpdLog.cmake  StringPy.cmake
libs/common/: CMakeLists.txt  exports.def
libs/common/include/common/: interface.hpp  module_wrapper.hpp  object_container.hpp  object_list.hpp  platform.hpp
libs/common/include/common/engine/: engine_wrapper.hpp
libs/common/include/common/engine/interface/: dedicated_serverapi_interface.hpp  system_interface.hpp  systemmodule_interface.hpp
libs/common/include/common/filesystem/: filesystem_wrapper.hpp
libs/common/include/common/filesystem/interface/: filesystem_interface.hpp
libs/common/include/common/hlds/interface/: hlds_exports.hpp
libs/common/include/common/vgui/interface/: vguimodule_interface.hpp
libs/common/src/common/: interface.cpp  module_wrapper.cpp  object_list.cpp
libs/common/tests/: CMakeLists.txt
libs/common/tests/src/common/: object_list.cpp
libs/core/: CMakeLists.txt
libs/core/include/core/: cmdline_args.hpp  cmdline_processor.hpp  init.hpp
libs/core/src/core/: cmdline_args.cpp  cmdline_processor.cpp  exports.cpp  init.cpp
libs/core/tests/: CMakeLists.txt
libs/core/tests/src/core/: cmdline_args.cpp
libs/model/: CMakeLists.txt
libs/model/include/model/: console_commands.hpp  server_loop.hpp  server_status.hpp  userinput_history.hpp
libs/model/src/model/: console_commands.cpp  server_loop.cpp  userinput_history.cpp
libs/model/src/model/linux/: server_loop.cpp
libs/model/src/model/windows/: server_loop.cpp
libs/model/tests/: CMakeLists.txt
libs/model/tests/src/model/: userinput_history.cpp
libs/presenter/: CMakeLists.txt
libs/presenter/include/presenter/: input_presenter.hpp  output_presenter.hpp
libs/util/: CMakeLists.txt
libs/util/include/util/: circular_buffer.hpp  console.hpp  file.hpp  lifecycle.hpp  log_output.hpp  logger.hpp  observable.hpp  signal.hpp  singleton.hpp  string.hpp  system.hpp  threadsafe_queue.hpp
libs/util/include/util/linux/: console.hpp  signal.hpp
libs/util/include/util/linux/system/: error.hpp  module.hpp  process.hpp
libs/util/include/util/windows/: console.hpp
libs/util/include/util/windows/system/: crash_dumper.hpp  error.hpp  gdi.hpp  module.hpp  ntdll.hpp  process.hpp
libs/util/src/util/: file.cpp  lifecycle.cpp  logger.cpp  system.cpp
libs/util/src/util/linux/: console.cpp  signal.cpp
libs/util/src/util/linux/system/: error.cpp
libs/util/src/util/windows/: console.cpp
libs/util/src/util/windows/system/: crash_dumper.cpp  error.cpp  gdi.cpp  ntdll.cpp  process.cpp
libs/util/tests/: CMakeLists.txt
libs/util/tests/src/util/: circular_buffer.cpp  observable.cpp
libs/view/: CMakeLists.txt
libs/view/include/view/: base_view.hpp  console_input.hpp  console_view.hpp
libs/view/include/view/linux/: console_view.hpp  terminal_settings.hpp  tty_redirect.hpp
libs/view/include/view/windows/: console_view.hpp
libs/view/src/view/: console_input.cpp
libs/view/src/view/linux/: console_input.cpp
libs/view/src/view/windows/: console_input.cpp  console_view.cpp
src/: CMakeLists.txt  exports.cpp  hlds.exe.manifest.in  hlds.exe.rc.in  main.cpp
src/abstract/: CMakeLists.txt  view.hpp
src/common/: CMakeLists.txt  interface.cpp  interface.hpp  module_wrapper.cpp  module_wrapper.hpp  object_container.hpp  object_list.cpp  object_list.hpp  platform.hpp
src/common/engine/: engine_wrapper.hpp
src/common/engine/interface/: dedicated_serverapi_interface.hpp  system_interface.hpp  systemmodule_interface.hpp
src/common/filesystem/: filesystem_wrapper.hpp
src/common/filesystem/interface/: filesystem_interface.hpp
src/common/hlds/interface/: hlds_exports.hpp
src/common/vgui/interface/: vguimodule_interface.hpp
src/model/: CMakeLists.txt  cmdline_args.cpp  cmdline_args.hpp  console_commands.cpp  console_commands.hpp  server_loop.cpp  server_loop.hpp  server_status.hpp  userinput_history.cpp  userinput_history.hpp
src/model/linux/: server_loop.cpp
src/model/windows/: server_loop.cpp
src/presenter/: CMakeLists.txt  input_presenter.hpp  output_presenter.hpp
src/util/: CMakeLists.txt  circular_buffer.hpp  console.hpp  file.cpp  file.hpp  lifecycle.cpp  lifecycle.hpp  logger.cpp  logger.hpp  observable.hpp  signal.hpp  singleton.hpp  string.hpp  system.cpp  system.hpp  threadsafe_queue.hpp
src/util/linux/: console.cpp  console.hpp  signal.cpp  signal.hpp
src/util/linux/system/: error.cpp  error.hpp  module.hpp  process.hpp
src/util/windows/: console.cpp  console.hpp
src/util/windows/system/: crash_dumper.cpp  crash_dumper.hpp  error.cpp  error.hpp  gdi.cpp  gdi.hpp  module.hpp  ntdll.cpp  ntdll.hpp  process.cpp  process.hpp
src/view/: CMakeLists.txt
src/view/console/: CMakeLists.txt  console_input.cpp  console_input.hpp  console_view.hpp
src/view/console/linux/: console_input.cpp  console_view.hpp  terminal_settings.hpp  tty_redirect.hpp
src/view/console/windows/: console_input.cpp  console_view.cpp  console_view.hpp
tests/: CMakeLists.txt
tests/src/common/: object_list.cpp
tests/src/model/: cmdline_args.cpp  userinput_history.cpp
tests/src/util/: circular_buffer.cpp  observable.cpp
